# Interactive_Wallpaper_Map

./: README.md  index.html  package.json  styles.css  tsconfig.json  vite.config.ts
src/: app.js  data.js  main.js  mapRenderer.js  wallpaperClient.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: wallpaper.rs
src-tauri/src/windows_integration/: wallpaper.rs
src/app/: App.tsx
src/components/: SetAsWallpaperButton.tsx
src/core/: countryStatusService.js  statusConfig.js
src/data/: countryStore.js
src/export/: pipeline.js  theme.js
src/features/countries/: CountryPanel.tsx  countryStore.ts
src/features/export/: ExportPanel.tsx
src/features/map/: WorldMapCanvas.tsx
src/features/wallpaper/: WallpaperPanel.tsx
src/map/: worldMap.js
src/shared/components/: Shell.tsx
src/shared/styles/: globals.css
src/styles/: base.css  components.css  layout.css  tokens.css
src/ui/: controlPanel.js
